# ASdeep

./: .gitignore  .pylintrc  .rbcsIgnore  .rbcsignore  .readthedocs.yaml  LICENSE  README  README.md  alignment.py  alignment.sh  ase.py  asedlp  asedlp.md  fastp_preproc.sh  get_ase.py  hisat2_build.sh  hisat2_mapping.sh  make_matrix.py  pyproject.toml  quick_and_dirty.py  requirement.txt  requirements.txt  requirements.yml  run_asedlp.sh  sequnece.py  setup.cfg  setup.py  utilities.py  variant.py  wasp-pipeline.cwf
asedeep/: ASEDataset.py  ASEFactory.py  ASEReport.py  CamFactory.py  DLPFactory.py  HelbertCurve.py  dataset.py  hbcurve.py  model.py  predict.py  quantify.py  report.py  tests.py  train.py  zutils.py
asedeep/tests/: tests.py
asedlp/: ASEDataset.py  ASEFactory.py  ASEFactory_old.py  ASEReport.py  CNNFactory.py  CamFactory.py  DLPFactory.py  HelbertCurve.py  asedlp  asedlp.py  asedlp_cam.sh  asedlp_merge.sh  asedlp_train.sh  make_matrix.py  pytorch_CAM.py  setup.py  utilities.py  zutils.py
asedlp/ased/: ASEFactory.py  ASEReport.py  DLPFactory.py  __init__.py  zutils.py
asedlp/unittest/: ASEDataset_test.py  HelbertCurve_test.py  debug_asedlp_quant.sh
asedp/: ASEDataset.py  ASEFactory.py  ASEReport.py  CamFactory.py  DLPFactory.py  HelbertCurve.py  tests.py  zutils.py
configs/: template.conf
data/: AD1NY1ACXX-1-1_dup_GATK_allelic_read_counts.csv  test.bed.gz.tbi  test.db  test.fa  test.fa.gz.fai  test.gtf  test.gtf.db  test.gtf.gz.tbi  test.vcf  test.vcf.gz.tbi  test_meta.csv  test_wasp_ase_readcounts.ssv
docs/source/: conf.py  index.rst
misc/: SbatchAseQuantPipeline  allelic_imbalance_inference_by_pymc3.ipynb  ase_estimation.py  ase_geneset_enrichment.r  ase_report.r  asedeep.sh  asedlp_report.py  asedlp_report_geneset_enrichment.r  check_failed_samples.sh  convert_readme_to_pdf.sh  convert_tritype_to_vcf.sh  download_gtex_data.sh  download_igsr_data.sh  explain.ipynb  explore.ipynb  generate_config_bios.sh  generate_config_bios_aseq.sh  generate_config_file.sh  generate_config_file_bios-aseq.sh  generate_config_file_geuvadis.sh  generate_config_geuvadis.sh  generate_config_gtex.sh  genetic_variants_pca.sh  geuvadis_genotype_qc.sh  match_rnaseqid_to_dnaarrayid.py  md2pdf.sh  prepare_bios_vars.sh  prepare_ensembl_gene_models.r  prepare_gene_models.py  prepare_gene_models.sh  prepare_geuvadis_vars.sh  prepare_gtex_ase.py  prepare_gtex_ase.sh  prepare_gtex_vars.sh  solve_duplicated_snp_id.py  test.R  test.py  workscript.sh
mppl/: impute_and_phase.sh
mpppl/: impute_and_phasing.sh  phasing_imputation.sh
rnaseqpl/: .rbcsIgnore  LICENSE  README.md
rnaseqpl/scripts/: CollectOutputAndCleanup.sh  FastpPreprocessing.sh  SAMtoolsSplitBAM.sh  STARBuildGenomeIndex.sh  STARMapping.sh  SamtoolsSplitBAMbyChr.sh  StarBuildGenomeIndex.sh  StarFirstMapping.sh  WaspCreateFastaHdf5Database.sh  WaspCreateSnpHdf5Database.sh  WaspFindIntersectSnps.sh  WaspPipelinePerChr.sh  WaspRMBFilterAndRmDup.sh  WaspRMBFindIntersectedSnps.sh  WaspSplitAndConquer.sh  gatk_calibration.sh
scripts/: asedlp_quant.sh
scripts/misc/: ase_report_plotting.py  download_igsr_data.sh  generate_config_file.sh  make_matrix.py  split_samples.py
src/asdeep/: database.py  dataset.py  hilbert.py  inferai.py  main.py  predict.py  tabdict.py  train.py  zutils.py
src/asedeep/: dataset.py  main.py  predict.py  setup.py  train.py
tests/: pyro_test.py  pyro_test_official.py  tests.py
