[metadata]
name = asdeep
version = 0.1.3
author = Zhenhua Zhang
author_email = zhenhua.zhang217@gmail.com
url = http://pypi.python.org/pypi/asdeep
description = A deep-learning tool to interpret variant function by allelic imbalance.
long_description = file: README
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platform = any
keywords = Deep learning, allele-specific analysis, functional interpration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/zhenhua-zhang/asdeep/issue

[options]
zip_safe = false
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires = # TODO: Add package versions.
    pysam          # TODO: No stable version yet: 0.16.0.1
    numpy          # TODO: version 1.21.2 (?)
    scipy          # TODO: version 1.7.1 (?)
    matplotlib     # TODO: matplotlib version 3.4.3 (?)
    scikit-learn   # TODO: 1.0 is is available, will port to it.
    torch
    torchvision
    tensorboard
    numpy-hilbert-curve

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    asdeep = asdeep.main:main

[options.data_files]
data = data/test.fa.gz, data/test.vcf.gz, data/test.gtf.gz, data/test.bed.gz

[yapf]
indent_width = 4
column_limit = 79
based_on_style = pep8
join_multiple_lines = true
spaces_before_comment = 15, 20
dedent_closing_brackets = false

