[metadata]
name = asdeep
version = 0.1.3
author = Zhenhua Zhang
author_email = zhenhua.zhang217@gmail.com
url = http://pypi.python.org/pypi/asdeep
description = A deep-learning tool to infer variant function by allelic imbalance.
long_description = file: README
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platform = any
keywords = Deep learning, allele-specific analysis, functional interpration
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Bug Tracker = https://github.com/zhenhua-zhang/asdeep/issue

[options]
python_requires = >=3.7
zip_safe = false
package_dir =
    = src
packages = find:
include_package_data = True
install_requires = # TODO: Add package versions.
    arviz
    captum
    h5py
    matplotlib
    numpy
    numpy-hilbert-curve
    pymc3
    pysam
    scikit-learn
    tensorboard
    torch
    torchvision
setup_requires =
    setuptools >= 38.3.0
tests_requires =
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    asdeep = asdeep.main:main

[options.data_files]
data = 
    data/test.fa.gz
    data/test.vcf.gz
    data/test.gtf.gz
    data/test.bed.gz

[yapf]
indent_width = 4
column_limit = 79
based_on_style = pep8
join_multiple_lines = true
spaces_before_comment = 15, 20
dedent_closing_brackets = false

# Keep this section small, otherwise head to a pytest.ini file instead.
[tool:pytest]
testpaths = tests
